--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,14 @@ dependencies:
   dio: ^5.4.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
+  get_it: ^7.6.7
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
