--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
   get_it: ^7.6.7
+  talker_flutter: ^3.6.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
